pkg/front_end/testcases/general/constants/js_semantics/issue46123b.dart.strong.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/general/constants/js_semantics/issue46123b.dart:13:17: Error: Constant evaluation error:
// test() => const ParallaxOptions();
//                 ^
// pkg/front_end/testcases/general/constants/js_semantics/issue46123b.dart:13:17: Context: External constructors can't be evaluated in constant expressions.
// test() => const ParallaxOptions();
//                 ^
//
import self as self;
import "dart:_js_annotations" as _js;
import "dart:core" as core;

import "package:js/js.dart";

@#C2
@#C3
class ParallaxOptions extends core::Object /*hasConstConstructor*/  {
  external const constructor •() → self::ParallaxOptions;
  static method _#new#tearOff() → self::ParallaxOptions
    return new self::ParallaxOptions::•();
}
static method test() → dynamic
  return invalid-expression "External constructors can't be evaluated in constant expressions.";
static method main() → dynamic {}

constants  {
  #C1 = null
  #C2 = _js::JS {name:#C1}
  #C3 = _js::_Anonymous {}
}


Constructor coverage from constants:
org-dartlang-testcase:///issue46123b.dart:
- JS. (from org-dartlang-sdk:///lib/js/_js_annotations.dart)
- Object. (from org-dartlang-sdk:///lib/core/object.dart)
